<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCrearSalida">
    
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <ImageButton
               android:id="@+id/btnCancelar"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="16dp"
               android:backgroundTintMode="screen"
               app:tint="@color/black"
               android:contentDescription="@string/btn_cancelar"
               android:src="@android:drawable/ic_menu_revert"

               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

           <TextView
               android:id="@+id/tvCrearSalida"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginTop="16dp"
               android:text="@string/titulo_crear_salida"
               android:textColor="@color/black"
               android:textSize="28sp"
               android:textStyle="bold" />
           <EditText
               android:id="@+id/etNombreSalida"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginTop="16dp"
               android:layout_marginEnd="16dp"
               android:hint="@string/nombre_de_la_salida"
               android:inputType="text"
               android:padding="12dp" />
           <EditText
               android:id="@+id/etDescripcion"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginTop="16dp"
               android:layout_marginEnd="16dp"
               android:hint="@string/descripcion"
               android:inputType="text"
               android:padding="12dp" />
           <EditText
               android:id="@+id/etLugarDestino"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginTop="48dp"
               android:layout_marginEnd="16dp"
               android:hint="@string/hint_lugar_destino"
               android:inputType="text"
               android:padding="12dp" />
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_marginTop="16dp">
               <EditText
                   android:id="@+id/etHoraEntrada"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:layout_marginStart="16dp"
                   android:layout_marginEnd="8dp"
                   android:clickable="true"
                   android:focusable="false"
                   android:hint="@string/hint_hora_entrada"
                   android:padding="12dp" />
               <EditText
                   android:id="@+id/etHoraSalida"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:layout_marginStart="8dp"
                   android:layout_marginEnd="16dp"
                   android:clickable="true"
                   android:focusable="false"
                   android:hint="@string/hint_hora_salida"
                   android:padding="12dp" />
           </LinearLayout>
           <Switch
               android:id="@+id/switchTipoSalida"
               android:layout_width="wrap_content"
               android:layout_height="48dp"
               android:layout_marginStart="20dp"
               android:layout_marginTop="16dp"
               android:text="Salida temporal"
               android:textColor="@color/TextoOscuro"
               android:textSize="18dp" />

           <LinearLayout
               android:id="@+id/layoutDias"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="16dp"
               android:orientation="vertical"
               android:visibility="visible"

               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/switchTipoSalida">

               <CheckBox
                   android:id="@+id/cbLunes"
                   android:layout_width="wrap_content"
                   android:layout_height="48dp"
                   android:text="Lunes" />

               <CheckBox
                   android:id="@+id/cbMartes"
                   android:layout_width="wrap_content"
                   android:layout_height="48dp"
                   android:text="Martes" />

               <CheckBox
                   android:id="@+id/cbMiercoles"
                   android:layout_width="wrap_content"
                   android:layout_height="48dp"
                   android:text="Miercoles" />

               <CheckBox
                   android:id="@+id/cbJueves"
                   android:layout_width="wrap_content"
                   android:layout_height="48dp"
                   android:text="Jueves" />

               <CheckBox
                   android:id="@+id/cbViernes"
                   android:layout_width="wrap_content"
                   android:layout_height="48dp"
                   android:text="Viernes" />

               <CheckBox
                   android:id="@+id/cbSabado"
                   android:layout_width="wrap_content"
                   android:layout_height="48dp"
                   android:text="Sábado" />

               <CheckBox
                   android:id="@+id/cbDomingo"
                   android:layout_width="wrap_content"
                   android:layout_height="48dp"
                   android:text="Domingo" />

           </LinearLayout>

           <EditText
               android:id="@+id/etFecha"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginTop="16dp"
               android:layout_marginEnd="16dp"
               android:clickable="true"
               android:focusable="false"
               android:hint="@string/hint_seleccionar_fecha"
               android:padding="12dp"
               android:visibility="gone"

               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.0"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/switchTipoSalida" />
       </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/btn_guardarSalida"
        android:backgroundTint="@color/Principal"
        android:layout_margin="16dp"
        app:srcCompat="@android:drawable/ic_input_add"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>