<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2">


    <!-- LOGO -->

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo_text"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <!-- ICONO CONFIGURACION -->

    <ImageView
        android:id="@+id/iconConfig"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@android:drawable/ic_menu_manage"
        android:contentDescription="@string/descripcion_config"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!-- ICONO LISTA -->

    <ImageView
        android:id="@+id/iconLista"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@android:drawable/ic_menu_agenda"
        android:contentDescription="@string/descripcion_lista"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iconConfig"/>


    <!-- BARRA SUPERIOR -->

    <View
        android:id="@+id/barraSuperior"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="#D9D9D9"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!-- CAMPANA NOTIFICACIONES -->

    <ImageView
        android:id="@+id/campana"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@android:drawable/ic_dialog_info"
        android:contentDescription="@string/descripcion_notificaciones"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/barraSuperior"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerSalidas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/barraSuperior"
        app:layout_constraintBottom_toTopOf="@id/botonAgregar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- TARJETA 1

    <LinearLayout
        android:id="@+id/card1"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:orientation="vertical"
        android:background="#D9D9D9"
        android:padding="12dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/barraSuperior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/nombreSalida1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_salida"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/estadoSalida1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado_salida"/>

    </LinearLayout>


     TARJETA 2

    <LinearLayout
        android:id="@+id/card2"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:orientation="vertical"
        android:background="#D9D9D9"
        android:padding="12dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/card1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/nombreSalida2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_salida"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/estadoSalida2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado_salida"/>

    </LinearLayout>
-->

    <!-- BOTON AGREGAR -->

    <Button
        android:id="@+id/botonAgregar"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:text="@string/boton_agregar"
        android:textSize="24sp"
        android:backgroundTint="#6C2BD9"
        android:textColor="#FFFFFF"
        android:layout_margin="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>